--- a/platforms/browser/www/login.html
+++ b/platforms/browser/www/login.html
@@ -77,18 +77,36 @@
                         <input id="login_password" type="password" name="password" class="validate">
                         <label for="login_password">Contraseña</label>
                     </div>
-                    <div class="input-field col s8 offset-s2">
-                        <button class="btn-large waves-effect waves-light blue darken-4 col s12" type="submit" name="login" id="login_submit">Entrar
-                            <i class="small material-icons right">send</i>
-                        </button>
-                    </div>
+                    <!--<div class="input-field col s12">-->
+                        <div class="input-field col s8 offset-s2">
+                            <button class="btn-large waves-effect waves-light blue darken-4 col s12" type="submit" name="login" id="login_submit">Entrar
+                                <i class="small material-icons right">send</i>
+                            </button>
+                        </div>        
+                        <div class="preloader-wrapper small active" style="display: none;" id="preloader">
+                            <div class="spinner-layer spinner-blue-only">
+                                <div class="circle-clipper left">
+                                    <div class="circle"></div>
+                                </div>
+                                <div class="gap-patch">
+                                    <div class="circle"></div>
+                                </div>
+                                <div class="circle-clipper right">
+                                    <div class="circle"></div>
+                                </div>
+                            </div>
+                        </div>
+                    <!--</div>            -->
                     <div class="input-field col s8 offset-s2">
                         <button class="btn waves-effect waves-light col s12 light-blue darken-2" type="submit" name="register" id="user_register">Registrarse
                             <i class="material-icons right">supervisor_account</i>
                         </button>
-                    </div>
+                    </div>                    
                 </div>
             </form>
+            <div class="input-field col s8 offset-s2">
+                <span style="color: red" hidden="" id="errorLog">Datos Incorrectos</span>
+            </div>
         </div>
     </div>
 
