--- a/platforms/browser/www/login.html
+++ b/platforms/browser/www/login.html
@@ -69,7 +69,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">account_circle</i>
-                        <input id="login_email" required="" aria-required="true" type="text" name="email" class="validate">
+                        <input id="login_email" required="" aria-required="true" type="email" name="email" class="validate">
                         <label for="login_email">Email</label>
                     </div>
                     <div class="input-field col s12">
@@ -111,7 +111,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                          <i class="material-icons prefix">email</i>
-                        <input id="register_email" required="" aria-required="true" type="text" name="register_email" class="validate">
+                        <input id="register_email" required="" aria-required="true" type="email" name="register_email" class="validate">
                         <label for="register_email">Email</label>
                     </div>
                     <div class="input-field col s12">
