--- a/platforms/browser/www/contact.html
+++ b/platforms/browser/www/contact.html
@@ -61,24 +61,31 @@
         </div>
     </nav>
     <div class="container">
-        <div class="row logo-container">
-            <img src="icon.png">
-        </div>
-        <div class="row" id="container_login">
-            <form class="col s12" action="#" method="post" id="login_form">
+        <div class="row" id="container_contact">
+            <form class="col s12" action="#" method="post" id="contact_form">
                 <div class="row">
                     <div class="input-field col s12">
+                        <i class="material-icons prefix">email</i>
+                        <input id="contact_email" required="" aria-required="true" type="email" name="contact_email" class="validate">
+                        <label for="contact_email">Email</label>
+                    </div>    
+                    <div class="input-field col s12">
                         <i class="material-icons prefix">account_circle</i>
-                        <input id="login_email" required="" aria-required="true" type="email" name="email" class="validate">
-                        <label for="login_email">Email</label>
+                        <input id="contact_name" required="" aria-required="true" type="text" name="contact_name" class="validate">
+                        <label for="contact_name">Nombre</label>
                     </div>
                     <div class="input-field col s12">
-                        <i class="material-icons prefix">vpn_key</i>
-                        <input id="login_password" required="" aria-required="true" type="password" name="password" class="validate">
-                        <label for="login_password">Contraseña</label>
-                    </div>                    
+                        <i class="material-icons prefix">contact_phone</i>
+                        <input id="contact_phone" required="" aria-required="true" type="text" name="contact_phone" class="validate">
+                        <label for="contact_phone">Teléfono</label>
+                    </div>  
+                    <div class="input-field col s12">
+                      <i class="material-icons prefix">comment</i>
+                      <textarea id="contact_comment" required="" class="materialize-textarea"></textarea>
+                      <label for="contact_comment">Agrega un Comentario</label>
+                    </div>                  
                     <div class="input-field col s8 offset-s2">
-                        <button class="btn-large waves-effect waves-light blue darken-4 col s12" type="submit" name="login" id="login_submit">Entrar
+                        <button class="btn-large waves-effect waves-light blue darken-4 col s12" type="submit" name="contact_submit" id="contact_submit">Enviar
                             <i class="small material-icons right">send</i>
                         </button>
                     </div>        
@@ -95,71 +102,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="input-field col s8 offset-s2">
+                    <!--<div class="input-field col s8 offset-s2">
                         <button class="btn waves-effect waves-light col s12 light-blue darken-2" name="register" id="user_register">Registrarse
                             <i class="material-icons right">supervisor_account</i>
                         </button>
-                    </div>                    
+                    </div>-->
                 </div>
             </form>
             <div class="input-field col s8 offset-s2">
-                <span style="color: red" hidden="" id="errorLog">Datos Incorrectos</span>
-            </div>
-        </div>
-        <div class="row" style="display: none;" id="container_registro">
-            <form class="col s12" action="#" method="post" id="register_form">
-                <div class="row">
-                    <div class="input-field col s12">
-                         <i class="material-icons prefix">email</i>
-                        <input id="register_email" required="" aria-required="true" type="email" name="register_email" class="validate">
-                        <label for="register_email">Email</label>
-                    </div>
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">vpn_key</i>
-                        <input id="register_password" required="" aria-required="true" type="password" name="register_password" class="validate">
-                        <label for="register_password">Ingresa tu Contraseña</label>
-                    </div>  
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">vpn_key</i>
-                        <input id="confirm_password" required="" aria-required="true" type="password" name="confirm_password" class="validate">
-                        <label for="confirm_password">Confirma tu Contraseña</label>
-                    </div>  
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">account_circle</i>
-                        <input id="nombre" type="text" required="" aria-required="true" name="nombre" class="validate">
-                        <label for="nombre">Nombre</label>
-                    </div>
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">account_circle</i>
-                        <input id="apellidos" required="" aria-required="true" type="text" name="apellidos" class="validate">
-                        <label for="apellidos">Apellidos</label>
-                    </div>
-                    <div class="input-field col s8 offset-s2">
-                        <button class="btn waves-effect waves-light col s12 light-blue darken-2" type="submit" name="submit_register" id="submit_register">Registrar
-                            <i class="small material-icons right">send</i>
-                        </button>
-                    </div> 
-                    <div class="preloader-wrapper small active" style="display: none;" id="preloader_register">
-                        <div class="spinner-layer spinner-blue-only">
-                            <div class="circle-clipper left">
-                                <div class="circle"></div>
-                            </div>
-                            <div class="gap-patch">
-                                <div class="circle"></div>
-                            </div>
-                            <div class="circle-clipper right">
-                                <div class="circle"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="input-field col s8 offset-s2">
-                        <button class="btn waves-effect waves-light red col s12 darken-2""  name="cancelar_registro" id="cancelar_registro">Cancelar                            
-                        </button>
-                    </div>  
-                </div>
-            </form>
-            <div class="input-field col s8 offset-s2">
-                <span style="color: red" hidden="" id="errorLog_Register">La contraseñas no coinciden</span>
+                <span style="color: green" hidden="" id="errorLog">El comentario ha sido enviado</span>
             </div>
         </div>
 
@@ -173,9 +124,9 @@
 
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/login.js"></script>
+    <script type="text/javascript" src="js/contact.js"></script>
     <script type="text/javascript">
-        login.initialize();
+        contact.initialize();
     </script>
     
     
