--- a/platforms/browser/www/login.html
+++ b/platforms/browser/www/login.html
@@ -57,12 +57,15 @@
 <body class='white'>
     <nav>
         <div class="nav-wrapper blue darken-4">
+            <ul id="nav-mobile" class="left">
+                <li><a href="#" id="button_go_home"><i class="small material-icons">store</i></a></li>
+            </ul>
             <a href="#" class="brand-logo">Kyani Login/Registro</a>
         </div>
     </nav>
     <div class="container">
         <div class="row logo-container" id="container_logo">
-            <img src="icon.png">
+            <img src="img/logo_text.jpg">
         </div>
         <div class="row" id="container_login">
             <form class="col s12" action="#" method="post" id="login_form">
