--- a/www/index.html
+++ b/www/index.html
@@ -59,15 +59,17 @@
         <li id="menu_profile">
             <div class="userView">
                 <div class="background blue darken-4 col"></div>
-                <a href="#"><img class="circle" src="img/profile.png"></a>
+                <a href="#"><img class="circle" src="img/logo_mini.jpg"></a>
                 <div><span class="white-text name" id="profile_name">Estimado Cliente</span></div>
                 <div><span class="white-text email" id="profile_email">Bienvenido a Kyani</span></div>
             </div>
         </li>
 
         <li><div class="divider"></div></li>
-        <li id="client_register"><a class="waves-effect" href="#!"><i class="material-icons">mode_edit</i>Registrarme</a></li>
+        <li id="client_register"><a class="waves-effect" href=""><i class="material-icons">mode_edit</i>Registrarme</a></li>
         <li id="partner_login"><a class="waves-effect" href="#!"><i class="material-icons">work</i>Soy Socio</a></li>
+        <li><div class="divider"></div></li>
+        <li id="app_exit"><a class="waves-effect" href="#!"><i class="material-icons">settings_power</i>Salir</a></li>
     </ul>
 
     <nav>
