--- a/www/videos.html
+++ b/www/videos.html
@@ -56,7 +56,7 @@
         <li id="menu_profile">
             <div class="userView">
                 <div class="background blue darken-4 col"></div>
-                <a href="#"><img class="circle" src="img/profile.png"></a>
+                <a href="#"><img class="circle" src="img/logo_text.jpg"></a>
                 <div><span class="white-text name" id="profile_name">John Doe</span></div>
                 <div><span class="white-text email" id="profile_email">jdandturk@gmail.com</span></div>
             </div>
