Corrige errores de js

--- a/platforms/browser/www/contact.html
+++ b/platforms/browser/www/contact.html
@@ -105,6 +105,11 @@
                             </div>
                         </div>
                     </div>
+                    <!--<div class="input-field col s8 offset-s2">
+                        <button class="btn waves-effect waves-light col s12 light-blue darken-2" name="register" id="user_register">Registrarse
+                            <i class="material-icons right">supervisor_account</i>
+                        </button>
+                    </div>-->
                 </div>
             </form>
 
