--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -66,7 +66,7 @@
         </li>
 
         <li><div class="divider"></div></li>
-        <li id="client_register"><a class="waves-effect" href="#!"><i class="material-icons">mode_edit</i>Registrarme</a></li>
+        <li id="client_register"><a class="waves-effect" href="https://enroll.kyani.net/?country=MEXICO&language=108&sponsor=1391786"><i class="material-icons">mode_edit</i>Registrarme</a></li>
         <li id="partner_login"><a class="waves-effect" href="#!"><i class="material-icons">work</i>Soy Socio</a></li>
         <li><div class="divider"></div></li>
         <li id="app_exit"><a class="waves-effect" href="#!"><i class="material-icons">settings_power</i>Salir</a></li>
