--- a/www/index.html
+++ b/www/index.html
@@ -60,13 +60,12 @@
             <div class="userView">
                 <div class="background blue darken-4 col"></div>
                 <a href="#"><img class="circle" src="img/logo_mini.jpg"></a>
-                <div><span class="white-text name" id="profile_name">Estimado Cliente</span></div>
-                <div><span class="white-text email" id="profile_email">Bienvenido a Kyani</span></div>
+                <div><span class="white-text email" id="profile_email">Bienvenid@ a Kyani</span></div>
             </div>
         </li>
 
         <li><div class="divider"></div></li>
-        <li id="client_register"><a class="waves-effect" href="https://enroll.kyani.net/?country=MEXICO&language=108&sponsor=1391786"><i class="material-icons">mode_edit</i>Registrarme</a></li>
+        <li id="client_register"><a class="waves-effect" href="https://enroll.kyani.net/?country=MEXICO&language=108&sponsor=1391786"><i class="material-icons">mode_edit</i>¿Cuál es tu duda?</a></li>
         <li id="partner_login"><a class="waves-effect" href="#!"><i class="material-icons">work</i>Soy Socio</a></li>
         <li><div class="divider"></div></li>
         <li id="app_exit"><a class="waves-effect" href="#!"><i class="material-icons">settings_power</i>Salir</a></li>
@@ -75,7 +74,7 @@
     <nav>
         <div class="nav-wrapper blue darken-4">
             <a href="#" data-activates="client_menu" class="button-collapse"><i class="material-icons">menu</i></a>
-            <a href="#" class="brand-logo">Kyani Cliente</a>
+            <a href="#" class="brand-logo">Kyani Invitado</a>
         </div>
     </nav>
 
