--- a/www/videos.html
+++ b/www/videos.html
@@ -73,7 +73,7 @@
     <nav>
         <div class="nav-wrapper blue darken-4">
             <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
-            <a href="#" class="brand-logo">Kyani Videos</a>
+            <a href="#" class="brand-logo">Kyani Socio</a>
         </div>
     </nav>
     <div class="container">
