actualizacion de videos

--- a/platforms/browser/www/contact.html
+++ b/platforms/browser/www/contact.html
@@ -58,7 +58,7 @@
     <nav>
         <div class="nav-wrapper blue darken-4">
             <ul id="nav-mobile" class="left">
-                <li><a href="#" id="button_go_home"><i class="small material-icons">store</i></a></li>
+                <li><a id="button_go_home"><i class="small material-icons">store</i></a></li>
             </ul>
             <a href="#" class="brand-logo">Kyani Contact</a>
         </div>
