Correccion de observaciones

--- a/platforms/browser/www/contact.html
+++ b/platforms/browser/www/contact.html
@@ -60,7 +60,7 @@
             <ul id="nav-mobile" class="left">
                 <li><a id="button_go_home"><i class="small material-icons">store</i></a></li>
             </ul>
-            <a href="#" class="brand-logo">Kyani Contact</a>
+            <a href="#" class="brand-logo">¿Cual es tu duda?)</a>
         </div>
     </nav>
     <div class="container">
@@ -105,11 +105,6 @@
                             </div>
                         </div>
                     </div>
-                    <!--<div class="input-field col s8 offset-s2">
-                        <button class="btn waves-effect waves-light col s12 light-blue darken-2" name="register" id="user_register">Registrarse
-                            <i class="material-icons right">supervisor_account</i>
-                        </button>
-                    </div>-->
                 </div>
             </form>
 
