--- a/www/index.html
+++ b/www/index.html
@@ -65,7 +65,10 @@
         </li>
 
         <li><div class="divider"></div></li>
-        <li id="client_register"><a class="waves-effect" href="https://enroll.kyani.net/?country=MEXICO&language=108&sponsor=1391786"><i class="material-icons">mode_edit</i>¿Cuál es tu duda?</a></li>
+        <li id="client_register"><a class="waves-effect" href="https://enroll.kyani.net/?country=MEXICO&language=108&sponsor=1391786">
+            <i class="material-icons">mode_edit</i>Registrarte</a></li>
+        <li id="client_buy"><a class="waves-effect" href="https://shop.kyani.net/login/?country=MEXICO&language=108&sponsor=1391786">
+            <i class="material-icons">shopping_basket</i>Comprar</a></li>
         <li id="partner_login"><a class="waves-effect" href="#!"><i class="material-icons">work</i>Soy Socio</a></li>
         <li><div class="divider"></div></li>
         <li id="app_exit"><a class="waves-effect" href="#!"><i class="material-icons">settings_power</i>Salir</a></li>
