--- a/www/login.html
+++ b/www/login.html
@@ -58,9 +58,9 @@
     <nav>
         <div class="nav-wrapper blue darken-4">
             <ul id="nav-mobile" class="left">
-                <li><a href="#" id="button_go_home"><i class="small material-icons">store</i></a></li>
+                <li><a id="button_go_home"><i class="small material-icons">store</i></a></li>
             </ul>
-            <a href="#" class="brand-logo">Kyani Login/Registro</a>
+            <a class="brand-logo">Kyani Login/Registro</a>
         </div>
     </nav>
     <div class="container">
