Agrega iconos para android

--- a/www/contact.html
+++ b/www/contact.html
@@ -60,7 +60,7 @@
             <ul id="nav-mobile" class="left">
                 <li><a id="button_go_home"><i class="small material-icons">store</i></a></li>
             </ul>
-            <a href="#" class="brand-logo">¿Cual es tu duda?)</a>
+            <a href="#" class="brand-logo">¿Cual es tu duda?</a>
         </div>
     </nav>
     <div class="container">
@@ -84,12 +84,12 @@
                     </div>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">perm_phone_msg</i>
-                        <input id="contact_whatsapp" required="" aria-required="true" type="text" name="contact_whatsapp" class="validate" placeholder="+52 8113546324">
+                        <input id="contact_whatsapp" required="" aria-required="true" type="text" name="contact_whatsapp" class="validate" placeholder="ej. +52 8113546324">
                         <label for="contact_whatsapp">Whatsapp</label>
                     </div>
                     <div class="input-field col s12">
-                        <i class="material-icons prefix">language</i>
-                        <select id="contact_country" name="contact_country" class="validate">
+                        <i class="material-icons prefix contact_country">language</i>
+                        <select id="contact_country" name="contact_country" class="validate browser-default">
                             <option value="AF">Afganistán</option>
                             <option value="AL">Albania</option>
                             <option value="DE">Alemania</option>
@@ -325,13 +325,13 @@
                             <option value="ZM">Zambia</option>
                             <option value="ZW">Zimbabue</option>
                         </select>
-                        <label for="contact_country">País</label>
-                    </div> 
+                        <label for="contact_country" class="active">País</label>
+                    </div>
                     <div class="input-field col s12">
                       <i class="material-icons prefix">comment</i>
                       <textarea id="contact_comment" required="" class="materialize-textarea"></textarea>
                       <label for="contact_comment">Agrega un Comentario</label>
-                    </div>                  
+                    </div>
                     <div class="input-field col s8 offset-s2">
                         <button class="btn-large waves-effect waves-light blue darken-4 col s12" type="submit" name="contact_submit" id="contact_submit">Enviar
                             <i class="small material-icons right">send</i>
