--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,7 @@
         <li id="menu_profile">
             <div class="userView">
                 <div class="background blue darken-4 col"></div>
-                <a href="#"><img class="circle" src="img/logo_mini.jpg"></a>
+                <a href="#"><img class="circle" src="img/logo.png"></a>
                 <div><span class="white-text email" id="profile_email">Bienvenid@ a Kyani</span></div>
             </div>
         </li>
