--- a/www/login.html
+++ b/www/login.html
@@ -65,7 +65,7 @@
     </nav>
     <div class="container">
         <div class="row logo-container" id="container_logo">
-            <img src="img/logo_text.jpg">
+            <img src="img/logo.png">
         </div>
         <div class="row" id="container_login">
             <form class="col s12" action="#" method="post" id="login_form">
@@ -115,27 +115,27 @@
                     <div class="input-field col s12">
                          <i class="material-icons prefix">email</i>
                         <input id="register_email" required="" aria-required="true" type="email" name="register_email" class="validate">
-                        <label for="register_email">Email</label>
+                        <label for="register_email">Email *</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">vpn_key</i>
                         <input id="register_password" required="" aria-required="true" type="password" name="register_password" class="validate">
-                        <label for="register_password">Ingresa tu Contraseña</label>
+                        <label for="register_password">Ingresa tu Contraseña *</label>
                     </div>  
                     <div class="input-field col s12">
                         <i class="material-icons prefix">vpn_key</i>
                         <input id="confirm_password" required="" aria-required="true" type="password" name="confirm_password" class="validate">
-                        <label for="confirm_password">Confirma tu Contraseña</label>
+                        <label for="confirm_password">Confirma tu Contraseña *</label>
                     </div>  
                     <div class="input-field col s12">
                         <i class="material-icons prefix">account_circle</i>
                         <input id="nombre" type="text" required="" aria-required="true" name="nombre" class="validate">
-                        <label for="nombre">Nombre</label>
+                        <label for="nombre">Nombre *</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">account_circle</i>
                         <input id="apellidos" required="" aria-required="true" type="text" name="apellidos" class="validate">
-                        <label for="apellidos">Apellidos</label>
+                        <label for="apellidos">Apellidos *</label>
                     </div>
                     <div class="input-field col s8 offset-s2">
                         <button class="btn waves-effect waves-light col s12 light-blue darken-2" type="submit" name="submit_register" id="submit_register">Registrar
@@ -174,6 +174,8 @@
 
     <!-- <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
 
+    <script type="text/javascript" src="js/external_libs/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="js/external_libs/additional-methods.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/login.js"></script>
